--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,11 @@
 			<groupId>com.leansoft</groupId>
 			<artifactId>bigqueue</artifactId>
 			<version>0.7.0</version>
-
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.angus</groupId>
+			<artifactId>angus-mail</artifactId>
+			<version>2.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.reflections</groupId>
