--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,17 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.garganttua</groupId>
+			<artifactId>garganttua-reflection</artifactId>
+			<version>1.0.14</version>
+		</dependency>
+		<dependency>
+			<groupId>com.garganttua</groupId>
+			<artifactId>garganttua-annotation-scanner-spring</artifactId>
+			<version>1.0.14</version>
+		</dependency>
+	
+		<dependency>
 			<groupId>com.jayway.jsonpath</groupId>
 			<artifactId>json-path</artifactId>
 			<version>2.7.0</version>
@@ -112,16 +123,7 @@
 			<groupId>org.reflections</groupId>
 			<artifactId>reflections</artifactId>
 			<version>0.10.2</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.slf4j</groupId>
-					<artifactId>slf4j-api</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.slf4j</groupId>
-					<artifactId>slf4j-simple</artifactId>
-				</exclusion>
-			</exclusions>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
