--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,12 +1,13 @@
-# This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
-# For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
-
 name: Maven Package
 
 on:
-  push
+  push:
+    branches: 
+      - "**"  # Build on any branch push
+    tags:
+      - "*"  # Trigger on any tag creation
 
-jobs:  
+jobs:
   build:
 
     runs-on: ubuntu-latest
@@ -21,13 +22,64 @@ jobs:
       with:
         java-version: '18'
         distribution: 'temurin'
+        server-id: github-garganttua-events
+        settings-path: ${{ github.workspace }} # location for the settings.xml file
+
+    - name: Generate Maven Settings
+      uses: whelk-io/maven-settings-xml-action@v22
+      with:
+        output_file: package-settings.xml
+        servers: >
+          [
+            {
+              "id": "github garganttua tooling",
+              "username": "${{ github.actor }}",
+              "password": "${{ github.token }}"
+            }
+          ]
+
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml -s $GITHUB_WORKSPACE/package-settings.xml
+      
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    if: |
+      github.ref == 'refs/heads/dev' || startsWith(github.ref, 'refs/tags/')
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up JDK 18
+      uses: actions/setup-java@v4
+      with:
+        java-version: '18'
+        distribution: 'temurin'
         server-id: github garganttua events
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    - name: Generate Maven Settings
+      uses: whelk-io/maven-settings-xml-action@v22
+      with:
+        output_file: custom-settings.xml
+        servers: |
+          [
+            {
+              "id": "github garganttua tooling",
+              "username": "${{ github.actor }}",
+              "password": "${{ github.token }}"
+            },
+             {
+              "id": "github garganttua events",
+              "username": "${{ github.actor }}",
+              "password": "${{ github.token }}"
+            }
+          ]
 
-    - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
+    - name: Deploy to GitHub Packages Apache Maven
+      run: mvn deploy -s $GITHUB_WORKSPACE/custom-settings.xml
       env:
-        GITHUB_TOKEN: ${{ github.token }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
